# Streamoid-Marketplace

./: .env.local  .gitignore  Makefile  README.md  Streamoid-Marketplace.code-workspace  manage.py  pyproject.toml
.github/workflows/: build.yaml
docker/: Dockerfile  docker-compose.yml  install_deps.py
streamoid/: asgi.py  settings.py  urls.py  wsgi.py
streamoid/config/: settings.py  settings_base.py  urls.py
streamoid/config/settings/: __init__.py  local.py  production.py
streamoid/core/: base_service.py  constants.py  custom_validation.py  file_validation.py  helpers.py  minio.py  schema.py  serializers.py
streamoid/core/tests/: test_custom_validation.py  test_file_validation.py
streamoid/cron/: file_transformer_cron.py
streamoid/cron/tests/: test_file_transformer_cron.py
streamoid/mapping/: admin.py  constants.py  models.py  schema_serializers.py  serializers.py
streamoid/mapping/migrations/: 0001_initial.py
streamoid/mapping/services/: mapping_base.py
streamoid/marketplace/: admin.py  models.py  schema_serializers.py  serializers.py
streamoid/marketplace/decorators/: validation.py
streamoid/marketplace/migrations/: 0001_initial.py
streamoid/marketplace/services/: marketplace_base.py
streamoid/marketplace/tests/: test_serializers.py  test_services.py
streamoid/seller/: admin.py  constants.py  file_parser.py  helpers.py  models.py  schema_serializers.py  serializers.py
streamoid/seller/decorators/: validation.py
streamoid/seller/migrations/: 0001_initial.py  0002_rename_bucket_name_seller_seller_uuid_and_more.py
(+14 files in other folders)
